# pzaz-homework

./: README.md
backend/: .env.example  .gitignore  Makefile  pyproject.toml
backend/src/: conftest.py  manage.py
backend/src/books/: admin.py  models.py  serializers.py  views.py
backend/src/books/migrations/: 0001_initial.py
backend/src/books/tests/: test_create.py  test_delete.py  test_list.py  test_update.py
backend/src/books/use_cases/: create.py  delete.py  update.py
backend/src/pzaz/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/users/: models.py
backend/src/users/migrations/: 0001_initial.py
backend/src/users/tests/: test_login.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: auth.ts  books.ts  index.ts
frontend/src/components/: BookList.vue
frontend/src/router/: index.ts
frontend/src/store/: index.ts
frontend/src/types/: book.ts
frontend/src/views/: AddBook.vue  BookDetail.vue  BooksView.vue  LoginView.vue
